Nested declaration fix, as well as black text on mobile issue

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -25,7 +25,7 @@ h1,h2,h3,h4,h5,h6{
 }
 p,a,span,ul,ol{
   font-family: $paragraph-font;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.5;
 }
 a{
