--- a/src/scss/base/_portfolio.scss
+++ b/src/scss/base/_portfolio.scss
@@ -1,21 +1,25 @@
 .jb-portfolio{
-  position: relative;
-  display: inline-block;
-  max-width: $max-width;
-  padding: 1em;
-  margin: auto;
-  box-sizing: border-box;
-  background-color: black;
+  & {
+    position: relative;
+    display: inline-block;
+    max-width: $max-width;
+    padding: 1em;
+    margin: auto;
+    box-sizing: border-box;
+    background-color: black;
+  }
   h2{
     color: white;
   }
   &__item{
-    position: relative;
-    display: flex;
-    flex-direction: column-reverse;
-    width: 100%;
-    height: auto;
-    margin-bottom: 1em;
+    & {
+      position: relative;
+      display: flex;
+      flex-direction: column-reverse;
+      width: 100%;
+      height: auto;
+      margin-bottom: 1em;
+    }
     @media screen and (min-width: $breakpoint-med){
       display: inline-block;
       margin-bottom: 2em;
@@ -43,30 +47,33 @@
       }
     }
     &__text{
-      display: inline-block;
-      width: 100%;
-      max-width: 100%;
-      text-align: left;
+      & {
+        display: inline-block;
+        width: 100%;
+        max-width: 100%;
+        text-align: left;
+        color: white;
+        padding: 1em;
+        border: solid 5px black;
+      }
       @media screen and (min-width: $breakpoint-med){
         width: 40%;
         position: absolute;
         z-index: 2;
         background: white;
+        color: black;
       }
-      padding: 1em;
-      // margin: 1em;
-      border: solid 5px black;
-      // background: rgb(0,183,181);
-      // background: linear-gradient(55deg, rgba(0,183,181,1) 0%, rgba(9,184,82,1) 100%);
     }
     &__image{
-      display: inline-block;
-      width: 100%;
-      height: auto;
+      & {
+        display: inline-block;
+        margin: 1em 0;
+        width: 100%;
+        height: auto;
+      }
       @media screen and (min-width: $breakpoint-med){
         width: 80%;
       }
-      margin: 1em 0;
       img{
         width: 100%;
         height: auto;
