--- a/src/scss/base/_skills.scss
+++ b/src/scss/base/_skills.scss
@@ -1,25 +1,32 @@
 .jb-skills{
-  display: flex;
-  justify-content: space-around;
-  background-color: black;
+  & {
+    display: flex;
+    justify-content: space-around;
+    background-color: black;
+  }
   ul{
-    columns: 2;
-    padding: 0 0 0 2em;
+    & {
+      padding: 0 0 0 2em;
+    }
+    @media screen and (min-width: $breakpoint-small){
+      margin: 2em auto;
+      columns: 2;
+    }
   }
   li{
     margin-right: 1em;
   }
   &__inner{
-    display: inline-block;
-    margin: 2em;
-    border: solid 5px white;
+    & { 
+      display: inline-block;
+      border: solid 5px white;
+      width: 100%;
+      max-width: $max-width;
+      padding: 1em;
+    }
     @media screen and (min-width: $breakpoint-small){
       margin: 2em auto;
     }
-    width: 100%;
-    max-width: $max-width;
-    padding: 1em;
-    // background-color: white;
     &__text{
       background-color: white;
       box-sizing: border-box;
